update vercel AND server

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,23 +1,9 @@
 {
-    "builds": [
-      {
-        "src": "./server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "./server.js",
-        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"],
-        "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "https://resume-ai-analyzer-seven.vercel.app" },
-            { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-            { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
-            { "key": "Access-Control-Allow-Credentials", "value": "true" }
-        ],
-        "status": 200
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "server.js" }
+  ]
+}
