--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,21 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "server.js" }
-  ]
+    "builds": [
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "./server.js",
+        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"],
+        "headers": {
+            "Access-Control-Allow-Origin": "*"
+        },
+        "status": 200
+      }
+    ]
 }
+
+  
