--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,6 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "html2canvas": "^1.4.1",
-    "mammoth": "^1.9.1",
-    "multer": "^2.0.1",
-    "pdf-parse": "^1.1.1",
-    "pdfkit": "^0.17.1"
+    "html2canvas": "^1.4.1"
   }
 }
