--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,13 +7,8 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization"
-      }
+      "src": "/api/(.*)",
+      "dest": "/server.js"
     }
   ]
 }
