--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,21 @@
 {
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
+    "builds": [
+      {
+        "src": "./server.js",
+        "use": "@vercel/node"
       }
-    }
-  ]
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "./server.js",
+        "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "HEAD", "OPTIONS"],
+        "headers": {
+            "Access-Control-Allow-Origin": "*"
+        },
+        "status": 200
+      }
+    ]
 }
+
+  
